# WealthTorii

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: c-cpp.yml
apps/api/: CMakeLists.txt
apps/api/src/: auth.hpp  json_support.hpp  main.cpp  openapi.hpp
apps/cli/: CMakeLists.txt
apps/cli/src/: budget_config.cpp  budget_config.hpp  commands.cpp  commands.hpp  main.cpp  rules_config.cpp  rules_config.hpp
apps/cli/tests/: budget_config_tests.cpp  commands_tests.cpp  rules_config_tests.cpp
cmake/: ProjectOptions.cmake  Sanitizers.cmake  Warnings.cmake
docs/adr/: 0001-money-int64-minor-units.md  0002-storage-postgres-docker.md
docs/architecture/: Structure.md
infra/: docker-compose.yml
libs/analytics/: CMakeLists.txt
libs/analytics/include/wealthtorii/analytics/: analytics.hpp
libs/analytics/src/: analytics.cpp
libs/analytics/tests/: analytics_tests.cpp
libs/budget/: CMakeLists.txt
libs/budget/include/wealthtorii/budget/: allocation.hpp  budget.hpp  category.hpp
libs/budget/src/: allocation.cpp  budget.cpp  category.cpp
libs/budget/tests/: allocation_tests.cpp  budget_tests.cpp  category_tests.cpp
libs/import/: CMakeLists.txt
libs/import/include/wealthtorii/import/: bp_csv.hpp
libs/import/src/: bp_csv.cpp
libs/import/tests/: bp_csv_tests.cpp  bp_real_data_tests.cpp
libs/ledger/: CMakeLists.txt
libs/ledger/include/wealthtorii/ledger/: account.hpp  journal.hpp  transaction.hpp
libs/ledger/src/: account.cpp  journal.cpp  transaction.cpp
libs/ledger/tests/: account_tests.cpp  journal_tests.cpp  transaction_tests.cpp
libs/market_data/: CMakeLists.txt
libs/market_data/include/wealthtorii/market_data/: stooq.hpp
libs/market_data/src/: stooq.cpp
libs/market_data/tests/: stooq_tests.cpp
libs/money/: CMakeLists.txt
libs/money/include/wealthtorii/money/: currency.hpp  money.hpp
libs/money/src/: currency.cpp  money.cpp
libs/money/tests/: currency_tests.cpp  money_tests.cpp
libs/portfolio/: CMakeLists.txt
libs/portfolio/include/wealthtorii/portfolio/: portfolio.hpp
libs/portfolio/src/: portfolio.cpp
libs/portfolio/tests/: portfolio_tests.cpp
libs/storage/: CMakeLists.txt
libs/storage/include/wealthtorii/storage/: connection.hpp  migrations.hpp  repository.hpp
libs/storage/src/: connection.cpp  migrations.cpp  repository.cpp
libs/storage/tests/: storage_tests.cpp
migrations/: 001_init.sql  002_bp_taxonomy.sql  003_users.sql  004_user_budget_rules.sql  005_account_opening_balance.sql  006_savings_goals.sql  007_investments.sql
scripts/: db.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  TrendsChart.tsx  api.ts  styles.css
